# ToDo

./: .gitignore  pyproject.toml
api/: db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: done.py  main.py  task.py
tests/: test_main.py
